--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "zod": "^3.25.76",
     "i18next": "^23.11.5",
     "react-i18next": "^14.1.2",
-    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-browser-languagedetector": "^7.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
